namespace MedeixeApi.Application.UseCases.Atendentes.Queries;

public class TipoAtendenteDto
{
    public int Value { get; set; }
    public string Name { get; set; } = null!;
}