namespace MedeixeApi.Application.UseCases.Usuarios.Queries
{
    public class TipoUsuarioDto
    {
        public int Value { get; set; }
        public string? Name { get; set; }
    }
}